--- a/ERP/Core.Erp.Web/Areas/Caja/Views/ConciliacionCaja/_GridViewPartial_conciliacion_facturas.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Caja/Views/ConciliacionCaja/_GridViewPartial_conciliacion_facturas.cshtml
@@ -100,7 +100,7 @@
                 p.DisplayFormatString = "N2";
             });
         });
-        
+        settings.ClientSideEvents.EndCallback = "Calcular";
     });
 }
 @grid.Bind(Model.lst_det_fact).GetHtml()
